:bug: Halftones slow down mobile browsers too much

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@ button, input[type="submit"], input[type="reset"] {
 		background-position: 100vw, 100vh;
 	}
 }
+
+@media only screen and (max-width: 900px) {
+	.halftonesBG {
+		display: none;
+	}
+}
